[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ehtim"
version = "1.3.0"
description = "Imaging, analysis, and simulation software for radio interferometry"
readme = "README.rst"
requires-python = ">=3.11,<3.13"
license = { text = "GPLv3" }
keywords = ["imaging", "astronomy", "EHT", "polarimetry"]

authors = [
    { name = "Andrew Chael", email = "achael@outlook.com" },
    { name = "Rohan Dahale", email = "rohan.dahale@utoronto.ca"}
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "astropy>=6.0",
    "matplotlib>=3.7.3",
    "finufft>=2.2",
    "skyfield",
    "h5py>=3.0",
    "requests",
    "future",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "pandas",
    "paramsurvey",
]

[project.urls]
Homepage = "https://github.com/achael/eht-imaging"
Download = "https://github.com/achael/eht-imaging/archive/v1.2.11.tar.gz"

# --- setuptools-specific config ---

[tool.setuptools.packages.find]     # replaces packages=[...] — auto-discovers
where = ["."]
include = ["ehtim*"]                # finds ehtim and all subpackages automatically

[tool.setuptools]
script-files = [                    # replaces scripts=[...] — installs raw script files
    "scripts/calibrate.py",
    "scripts/cleanup.py",
    "scripts/cli_blur_comp.py",
    "scripts/gendata.py",
    "scripts/imaging.py",
    "scripts/imgsum.py",
]

# --- pytest ---

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: optimizer-bound tests (scipy.optimize / Imager.make_image). Skip with -m 'not slow'.",
]

# --- ruff ---

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line too long — legacy code has many long lines
    "E741",   # ambiguous variable name (l, I, O) — common in physics code
    "F841",   # local variable assigned but never used — catch gradually
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]
# modeling_utils.py has deferred cleanup -- silence legacy-style noise
# until the dedicated cleanup PR.
"ehtim/modeling/modeling_utils.py" = ["E701", "E721", "E722", "F403", "F405", "UP031"]

[tool.ruff.lint.isort]
known-first-party = ["ehtim"]

# --- coverage ---

[tool.coverage.run]
source = ["ehtim"]

[tool.coverage.report]
show_missing = true
skip_empty = true
